# pacstall

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.org  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  INSTALL.md  LICENSE_BOILERPLATE  Pipfile  README.md  SECURITY.md  _config.yml  index.md  install.py  install.sh  launcher.py  pacstall  poetry.lock.REMOVED.git-id  pyproject.toml  setup.py  uninstall.sh  yeet.patch
..bfg-report/2021-08-13/11-28-01/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt  object-id-map.old-new.txt.REMOVED.git-id
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  bug_report.md  feature_request.md
.github/workflows/: Sh.yml  codacy-coverage-reporter.yml  deb.yml  greetings.yml  labeler.yml  linter.yml  main.yml  pacstall_check.sh  prettier_action.yml  publish-docker.yml  remote-bash.yml  rust.yml  test-pr.yml  workflow.sh
api/: __init__.py  color.py  config.py  message.py
branches/: README.md
branches/Community/: README.md
branches/HOMA/: README.md
branches/Testing/: README.md
branches/Unstable/: README.md
database/: README.md  extra-cmake-modules.zip.REMOVED.git-id  standard.txt
database/autoconf/: autoconf.tar.gz.REMOVED.git-id
database/catimg/: catimg.zip.REMOVED.git-id
database/cmake/: cmake.tar.gz.REMOVED.git-id
database/freetype2/: freetype2.tar.gz.REMOVED.git-id
database/freetype2-demos/: freetype2-demos.zip.REMOVED.git-id
database/gettext/: gettext.tar.gz.REMOVED.git-id
database/jp2a/: jp2a.zip.REMOVED.git-id
database/libcaca/: libcaca.tar.gz.REMOVED.git-id
database/libfaad-dev/: libfaad-dev.zip.REMOVED.git-id
database/libflac/: libflac.tar.xz.REMOVED.git-id
database/libfontconfig1-dev/: libfontconfig1-dev.tar.xz  libfontconfig1-dev.tar.xz.REMOVED.git-id
database/liblua/: liblua.zip.REMOVED.git-id
database/libogg/: libogg.tar.gz.REMOVED.git-id
database/libopus/: libopus.tar.gz.REMOVED.git-id
database/libqt5charts5-dev/: libqt5charts5-dev.zip.REMOVED.git-id
database/libsamplerate0-dev/: libsamplerate.zip.REMOVED.git-id
database/libsixel/: libsixel.zip.REMOVED.git-id
database/libsndfile1-dev/: libsndfile1.tar.gz.REMOVED.git-id
database/libtool/: libtool.tar.gz.REMOVED.git-id
database/libvorbis/: libvorbis.tar.gz.REMOVED.git-id
database/libx11/: libX11-libX11-1.6.9.tar.gz.REMOVED.git-id  libx11.tar.gz.REMOVED.git-id
database/libxext/: libxext.tar.gz.REMOVED.git-id
database/libxft/: libxft.tar.gz.REMOVED.git-id
database/libxml2/: libxml2.tar.gz.REMOVED.git-id
database/meson/: meson.tar.gz.REMOVED.git-id
database/ncurses/: ncurses.tar.gz.REMOVED.git-id
database/pixterm/: pixterm.zip.REMOVED.git-id
database/pkg-config/: pkg-config.tar.gz.REMOVED.git-id
database/qt5-default/: qt5-dev.zip.REMOVED.git-id
database/qt5declarative5-dev/: qtdeclarative-dev.tar.gz.REMOVED.git-id
database/qttools5-dev/: qttools-dev.zip.REMOVED.git-id
docs/: CNAME  README.md  _config.yml  index.html  index.md  manifest.json  sw.js
glibc/: glibc-2.31.tar.xz.REMOVED.git-id
install-pacstall/: README.md  install-packstall.sh  installpackages.sh  pacstallrepo.txt
misc/: APP  APP.pacscript  config.conf  config.toml  install.sh  pacstall  pacstall.8  pacstall.8.adoc  proto.pacscript  security  shini  shini.REMOVED.git-id
misc/completion/: bash  fish
misc/docs/: pacscript.md  proper_packaing.md  repos.md
misc/man/: pacstall.5  pacstall.8  pacstallrepo.5  update.5
misc/mime/: pacscript.desktop  pacscript.xml
misc/po/: LINGUAS  ar.po  bn.po  cs.po  de.po  es.po  fa.po  fr.po  hi.po  id.po  it.po  ja.po  ka.po  ko.po  nl.po  pacstall.pot  pt.po  pt_BR.po  ro.po  ru.po  su.po  sv.po  ta.po  th.po  tr.po  uk.po  ur.po  zh_SIMPLIFIED.po
misc/scripts/: add-repo.sh  build-local.sh  build.sh  bwrap.sh  change-repo.sh  checks.sh  dep-tree.sh  download-local.sh  download.sh  error-log.sh  error_log.sh  fetch-sources.sh  functions.sh  get-pacscript.sh  install-local.sh  install.sh  manage-repo.sh  package-base.sh  package.sh  purge.sh  quality-assurance.sh  query-info.sh  remove.sh  search.sh  srcinfo.sh  update.sh  upgrade.sh  version-constraints.sh  version_constraints.sh
pacstall/: Cargo.toml  __init__.py  __main__.py  pacstall  pacstall.py  parser.py  uninstall.sh
pacstall-builder/: Cargo.toml
pacstall-core/: Cargo.toml
pacstall/api/: __init__.py  color.py  config.py  config_facade.py  error_codes.py  logger.py  message.py  prompt.py
pacstall/cmds/: __init__.py  completers.py  config.py  download.py  install.py  list.py  remove.py  repo.py  repos.py  repository.py  search.py  show.py  upgrade.py  validators.py
pacstall/completion/: bash  fish
pacstall/scripts/: download.sh  install-local.sh  remove.sh  upgrade.sh
pacstall/src/: args.rs  main.rs
pacstall/src/cmds/checks/: checks.rs  mod.rs  pacname.rs  pkgver.rs
src/: args.rs  install.py  main.rs  pacstall  pacstall.py  uninstall.sh
src/api/: color.py  config.py
src/cmds/: build_pkg.rs  mod.rs  repos.py  search.py  search.rs
src/cmds/checks/: checks.rs  deb.rs  gives.rs  hash.rs  incompatible.rs  kver.rs  mask.rs  mod.rs  pacname.rs  pkgdesc.rs
src/scripts/: add-repo.sh  error_log.sh  query-info.sh  search.sh  update.sh  upgrade.sh
src/utilities/: ask.rs  fancy_message.rs  mod.rs  one_off.rs
tests/: conftest.py  test_argument_parser.py  test_download_command.py  test_root.py
tests/fixtures/: __init__.py  pacscript_list.py  random_generators.py
website-images/: README.md  example.gif.REMOVED.git-id  ezgif.com-video-to-gif.gif.REMOVED.git-id  pacstallascii.txt
