[package]
name = "pacstall"
version = "0.1.0"
edition = "2024"
authors = ["Elsie19 <hwengerstickel@protonmail.com>"]

[dependencies]
anyhow = "1.0.98"
brush-core = "0.3.1"
clap = { version = "4.5.37", features = ["cargo", "derive", "string"] }
colored = "3.0.0"
libpacstall = { path = "../Projects/libpacstall" }
reqwest = { version = "0.12.15", features = ["blocking"] }
strum = { version = "0.27.1", features = ["strum_macros"] }
tokio = "1.45.1"
url = "2.5.4"
