[tool.poetry]
name = "pacstall"
version = "2.0"
description = "An AUR-inspired package manager for Ubuntu"
authors = [
	"Henry <hwengerstickel@protonmail.com>",
	"Sourajyoti Basak <wiz28@protonmail.com>",
	"David Brochero <davidfbg00@gmail.com>"
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://pacstall.dev"
repository = "https://github.com/pacstall/pacstall"
documentation = "https://github.com/pacstall/pacstall/wiki"
keywords = [
	"aur",
	"cli",
	"command line",
	"console",
	"debian",
	"package manager",
	"pacscript",
	"pacstall",
	"ubuntu"
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Other",
	"Programming Language :: Other Scripting Engines",
	"Topic :: System",
	"Topic :: System :: Archiving :: Packaging",
	"Topic :: System :: Installation/Setup",
	"Topic :: System :: Systems Administration",
	"Topic :: System :: Software Distribution",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^11.0.0"
httpx = "^0.22.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pre-commit = "^2.15.0"
isort = "^5.10.1"
pyupgrade = "^2.29.1"
mypy = "^0.910"
codespell = "^2.1.0"
types-aiofiles = "^0.8.3"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
pacstall = "pacstall.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
